--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -28,7 +28,7 @@
   right: 2.5%;
   z-index: 101;
   mix-blend-mode: difference;
-  pointer-events: auto;
+  pointer-events: none;
   opacity: 0.5;
   transition: opacity 0.3s ease;
   height: 57px;
@@ -47,7 +47,7 @@
   right: calc(2.5% + 221px + 1.875%); /* 2.5% (immersive margin) + 221px (button width) + 1.875% (gap) */
   z-index: 101;
   mix-blend-mode: difference;
-  pointer-events: auto;
+  pointer-events: none;
   height: 57px;
   display: flex;
   align-items: center;
@@ -94,6 +94,7 @@
   color: white;
   border: none;
   padding: 0;
+  pointer-events: auto;
   cursor: pointer;
   display: flex;
   align-items: center;
@@ -154,6 +155,7 @@
   line-height: 110%;
   letter-spacing: 1px;
   text-align: center;
+  pointer-events: auto;
 }
 
 .menu-text::after {
@@ -176,6 +178,7 @@
   -webkit-backdrop-filter: blur(12px);
   border-radius: 100px;
   border: none;
+  pointer-events: auto;
   /* box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1),
     inset 0 1px 0 rgba(255, 255, 255, 0.5),
     inset 0 -1px 0 rgba(255, 255, 255, 0.1),
@@ -377,6 +380,7 @@
   cursor: pointer;
   position: relative;
   display: inline-block;
+  pointer-events: auto;
 }
 
 .account-link::after {
